# libfec

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  fec.h  makefile.in
cmake/: fecConfig.cmake
